--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
-.col{
+.col {
     margin-top: 20px;
+    height: 220px;
+    margin: 10px;
+    border-radius: 10px;
     border: 1px solid black;
-   height: 200px;
-   margin: 10px;
-   
 }
-.btn-group{
+.col :hover{
+    box-shadow: rgb(95, 94, 91) 1px 0 10px;
+}
+/*.btn-group{
   margin-top: 120px;
   text-align: center;
 
+}/*/
+
+h1{
+    text-align: center;
 }
+
+
+
+
